fix overflow

--- a/css/home/desktop/style.css
+++ b/css/home/desktop/style.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 25rem;
+    width: clamp(19rem, 20vw, 21rem); 
 }
 
 
@@ -36,13 +36,19 @@
     grid-template-rows: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
+    gap: 8rem;
+}
+.card__description{
+    text-align: center;
 }
 .card__description span{
     color: var(--clr-blanco);
 }
 .hero__card{
     transition: ease-out 500ms;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .hero__card:nth-child(2n){
     justify-self: start;
